--- a/index.html
+++ b/index.html
@@ -290,6 +290,14 @@
     </div>
 </div>
 
+<div id="modalMapa" class="modal">
+    <div class="modal-content" style="max-width: 800px; height: 80vh;">
+        <span class="close" onclick="fecharModal('modalMapa')">×</span>
+        <h3 id="titulo-mapa" style="margin-top:0;">📍 Localização da Entrega</h3>
+        <iframe id="iframe-mapa" width="100%" height="90%" frameborder="0" style="border:0; border-radius:15px;" allowfullscreen></iframe>
+    </div>
+</div>
+
 <script>
     const versiculos = ["O Senhor é o meu pastor, nada me faltará.", "Tudo posso naquele que me fortalece.", "O Senhor te abençoe e te guarde.", "O amor nunca falha.", "Confia no Senhor de todo o teu coração."];
 
@@ -361,6 +369,17 @@
             const endereco = `${rua}, ${num}, ${bairro}, ${cep}`;
             window.open("https://www.google.com/maps/search/" + encodeURIComponent(endereco));
         } else { alert("Preencha o endereço primeiro!"); }
+    }
+
+    function verRotaModal(id) {
+        const notas = JSON.parse(localStorage.getItem('notas_nuance') || '[]');
+        const n = notas.find(x => x.id === id);
+        if(!n || !n.rua) return alert("Endereço não disponível!");
+        
+        const endereco = `${n.rua}, ${n.numero}, ${n.bairro}, ${n.cep}`;
+        document.getElementById('titulo-mapa').innerText = "📍 Entrega: " + n.nome;
+        document.getElementById('iframe-mapa').src = `https://www.google.com/maps?q=${encodeURIComponent(endereco)}&output=embed`;
+        document.getElementById('modalMapa').style.display = 'block';
     }
 
     function processarTexto() {
@@ -469,6 +488,7 @@
                         <option value="entregue" ${n.status==='entregue'?'selected':''}>Entregue</option>
                     </select>
                     <button class="btn btn-nav" style="padding:4px 8px;" onclick="reabrirNota(${n.id})">👁️ Ver</button>
+                    <button class="btn btn-nav" style="background:#4285F4; padding:4px 8px; border:none;" onclick="verRotaModal(${n.id})">🗺️ Rota</button>
                     <button class="btn btn-nav" style="background:var(--whatsapp); padding:4px 8px; border:none;" onclick="enviarZapDireto(${n.id})">📱 Status</button>
                     <button class="btn btn-nav" style="background:#f59e0b; padding:4px 8px; border:none;" onclick="pedirFeedback(${n.id})">⭐ Feedback</button>
                     <button class="btn btn-nav" style="background:var(--danger); padding:4px 8px;" onclick="excluirNota(${n.id})">🗑️</button>
@@ -603,4 +623,3 @@
 </script>
 </body>
 </html>
-a
