--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
                 <button class="btn btn-nav" style="background: #1e293b;" onclick="window.print()">🖨️ Imprimir</button>
                 <button class="btn btn-nav" style="background: #1e293b;" onclick="imprimirEtiqueta()">🏷️ Etiqueta</button>
                 <button class="btn btn-nav" style="background: #1e293b;" onclick="baixarPDF()">💾 Salvar PDF</button>
+                <button class="btn btn-nav" style="background: #10b981; border: none;" onclick="exportarCSV()">📥 Exportar CSV</button>
                 <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="limparCampos()">🧹 Limpar</button>
             </div>
         </section>
@@ -734,6 +735,7 @@
         const rua = document.getElementById('rua').value;
         const num = document.getElementById('numero').value;
         const bairro = document.getElementById('bairro').value;
+        const cupomV = document.getElementById('cupom-input').value;
         const cep = document.getElementById('cep').value;
         if(rua) {
             const endereco = `${rua}, ${num}, ${bairro}, ${cep}`;
@@ -1105,6 +1107,42 @@
             };
             alert("O dado caiu em " + result + "! Prêmio: " + premios[result]);
         }, 2100);
+    }
+
+    function exportarCSV() {
+        let notas = JSON.parse(localStorage.getItem('notas_nuance') || '[]');
+        const minhasNotas = notas.filter(n => n.atendente === usuarioLogado);
+        
+        if (minhasNotas.length === 0) {
+            alert("Você não possui pedidos salvos para exportar.");
+            return;
+        }
+
+        const cabecalho = ["ID", "Data", "Cliente", "WhatsApp", "Endereço", "Total", "Pagamento", "Produtos"];
+        const linhas = minhasNotas.map(n => [
+            n.shortId,
+            n.data,
+            n.nome,
+            n.whatsapp,
+            `${n.rua}, ${n.numero} - ${n.bairro}`,
+            n.total,
+            n.pagamento,
+            n.produtos.replace(/\n/g, " | ")
+        ]);
+
+        let csvContent = "data:text/csv;charset=utf-8,\uFEFF";
+        csvContent += cabecalho.join(";") + "\n";
+        linhas.forEach(row => {
+            csvContent += row.join(";") + "\n";
+        });
+
+        const encodedUri = encodeURI(csvContent);
+        const link = document.createElement("a");
+        link.setAttribute("href", encodedUri);
+        link.setAttribute("download", `Relatorio_${nomeUsuarioLogado.replace(/\s+/g, '_')}.csv`);
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
     }
 </script>
 </body>
